--- a/signup.html
+++ b/signup.html
@@ -8,14 +8,38 @@
  <title>Odin Sign-up Page</title>
 </head>
 <body>
- <div class="image-container">
-  <div class="logo-container">
-   <div class="logo">
-    <img src="./assets/odin-lined.png" alt="a stylized image of the norse god odin's head">
-    <span>ODIN</span>
+ <div class="body-container">
+  <div class="image-container">
+   <div class="logo-container">
+    <div class="logo">
+     <img src="./assets/odin-lined.png" alt="the odin logo">
+     <span>ODIN</span>
+    </div>
    </div>
+   <span>Photo by Halie West on Unsplash</span>
   </div>
-  <span>Photo by Halie West on Unsplash</span>
+  <div class="form-container">
+   <div class="hero-text">
+    This is not the best service in the world.
+    It is just a tribute.
+   </div>
+   <form action="" method="post">
+    <div class="name">
+     <label for="first-name">First Name<input type="text" name="first-name" id="first-name"></label>
+     <label for="last-name">Last Name<input type="text" name="last-name" id="last-name"></label>
+    </div>
+    <div class="contact">
+     <label for="e-mail">Email <input type="email" name="e-mail" id="e-mail"></label>
+     <label for="phone">Phone Number<input type="tel" name="phone" id="phone"></label>
+    </div>
+    <div class="password">
+     <label for="password">Password<input type="password" name="password" id="password"></label>
+     <label for="password-confirm">Confirm Password<input type="password" name="password-confirm" id="password-confirm"></label>
+    </div>
+    <button>Create Account</button>
+   </form>
+   <div class="log-in">Already have an account? <a href="">Log in</a></div>
+  </div>
  </div>
 </body>
 </html>
