--- a/signup.html
+++ b/signup.html
@@ -20,21 +20,23 @@
   </div>
   <div class="form-container">
    <div class="hero-text">
-    This is not the best service in the world.
-    It is just a tribute.
+    <p>This is not the best service in the world.</p>
+    <p>It is just a tribute.</p>
    </div>
    <form action="" method="post">
-    <div class="name">
-     <label for="first-name">First Name<input type="text" name="first-name" id="first-name"></label>
-     <label for="last-name">Last Name<input type="text" name="last-name" id="last-name"></label>
-    </div>
-    <div class="contact">
-     <label for="e-mail">Email <input type="email" name="e-mail" id="e-mail"></label>
-     <label for="phone">Phone Number<input type="tel" name="phone" id="phone"></label>
-    </div>
-    <div class="password">
-     <label for="password">Password<input type="password" name="password" id="password"></label>
-     <label for="password-confirm">Confirm Password<input type="password" name="password-confirm" id="password-confirm"></label>
+    <div class="fields">
+     <div class="name">
+      <label for="first-name">First Name<input type="text" name="first-name" id="first-name"></label>
+      <label for="last-name">Last Name<input type="text" name="last-name" id="last-name"></label>
+     </div>
+     <div class="contact">
+      <label for="e-mail">Email <input type="email" name="e-mail" id="e-mail"></label>
+      <label for="phone">Phone Number<input type="tel" name="phone" id="phone"></label>
+     </div>
+     <div class="password">
+      <label for="password">Password<input type="password" name="password" id="password"></label>
+      <label for="password-confirm">Confirm Password<input type="password" name="password-confirm" id="password-confirm"></label>
+     </div>
     </div>
     <button>Create Account</button>
    </form>
