add form heading

--- a/signup.html
+++ b/signup.html
@@ -25,6 +25,7 @@
    </div>
    <form action="" method="post">
     <div class="fields">
+     <h1>Tell me who you are.</h1>
      <div class="name">
       <label for="first-name">First Name<input type="text" name="first-name" id="first-name"></label>
       <label for="last-name">Last Name<input type="text" name="last-name" id="last-name"></label>
