add password field validation and readme

--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <script src="script.js" defer></script>
  <title>Odin Sign-up Page</title>
 </head>
 <body>
@@ -35,7 +36,7 @@
       <label for="phone">Phone Number<input type="tel" name="phone" id="phone"></label>
      </div>
      <div class="password">
-      <label for="password">Password<input type="password" name="password" id="password"></label>
+      <label for="password">Password<input type="password" name="password" id="password"><div id="match-message">*Passwords must match.</div></label>
       <label for="password-confirm">Confirm Password<input type="password" name="password-confirm" id="password-confirm"></label>
      </div>
     </div>
